# gestro2

./: .gitignore  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
src/: app.css  app.html  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  direction.rs  gesture.rs  grabber.rs  lib.rs  main.rs  simulator.rs
src/lib/: App.svelte  DirectionSlot.svelte  GestureWheel.svelte  SettingsPanel.svelte  ShortcutCapture.svelte  StatusBar.svelte  types.ts
