[package]
name = "gestro"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rdev = { version = "0.5", features = ["unstable_grab"] }
enigo = "0.2"
directories = "5"
crossbeam-channel = "0.5"
log = "0.4"
env_logger = "0.11"
tauri-plugin-autostart = "2.5.1"
